--- a/TaskManager/TaskManager.vcxproj.filters
+++ b/TaskManager/TaskManager.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="file_service.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Taskm.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
