--- a/TaskManager/TaskManager.vcxproj
+++ b/TaskManager/TaskManager.vcxproj
@@ -128,11 +128,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="file_service.cpp" />
+    <ClCompile Include="Taskm.cpp" />
     <ClCompile Include="TaskManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="file_service.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="Taskm.h" />
   </ItemGroup>
