Конечная станция, доработка и полировка, принцип работы без моего согласования не менять

--- a/TaskManager/TaskManager.vcxproj
+++ b/TaskManager/TaskManager.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="TaskManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cpu.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="Taskm.h" />
   </ItemGroup>
