--- a/TaskManager/TaskManager.vcxproj.filters
+++ b/TaskManager/TaskManager.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="json.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="cpu.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
